--- a/stylesheet.css
+++ b/stylesheet.css
@@ -86,19 +86,72 @@ nav {
 	text-decoration:underline;
 }
 
+/*Other Shit*/
+
+h1 {
+	margin-bottom:20px;
+}
 
 
 
+.left {
+	height:500px;
+}
 
+.controls {
+	width:130px;
+	height:130px;
+	float:left;
+	border-radius:50%;
+	background-size:80%;
+	background-position:center;
+	background-color:#321515;
+}
 
+.play {
+	background-image:url('play.png');
+}
 
+.pause {
+	background-image:url('pause.png');
+}
 
+.controls:hover {
+	background-color:#c1a2a2;
+}
 
+#timeline {
+	width: 70%;
+	height: 15px;
+	background: #321515;
+	margin-left:5%;
+	float:left;
+	border-radius:12px;
+}
 
+#playhead {
+	width: 15px;
+	height: 15px;
+	border-radius: 50%;
+	margin-bottom: 30px;
+	background: #c1a2a2;
+}
 
+.details {
+	float:left;
+	margin:20px;
+	margin-left:38px;
+}
 
+article {
+	background-color:#230b0b;
+	margin:25px 0;
+	padding:10px;
+}
 
-
+audio {
+	display:none;
+}
 
 
 
